# terraform-iam-policy-validator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS  Pipfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: lint.yml  release-to-pypi.yaml
iam_check/: application_error.py  argument_actions.py  client.py  config.py  iam_check.py  parameters.py  pytest.ini
iam_check/config/: default.yaml
iam_check/doc/: example_report_1.md  example_report_2.md  example_report_3.md
iam_check/lib/: __init__.py  account_config.py  findings.py  iamCheck.py  iamPolicy.py  iamcheck_AccessAnalyzer.py  reporter.py  tfPlan.py
iam_check/test/: aws_iam_policy.tf  provider.tf  test_accessAnalyzer.py  test_policy.json  test_tf_plan.py
iam_check/test/iam_policy/: findings.json  test.tf  test_plan.json
iam_check/test/identity_policies/: identity_findings.json  identity_reference_policy.json  test.tf  test_plan.json
iam_check/test/multiple_policies/: identity_codes.json  identity_codes_reference_policy.json  identity_findings.json  identity_reference_policy.json  resource_findings.json  resource_reference_policy.json  test.tf  test_plan.json
iam_check/test/no_access_granted/: actions_findings.json  empty_findings.json  getObject_error_findings.json  getObject_example.json  getobject_findings.json  resources_and_actions_findings.json  resources_findings.json  test.tf  test_plan.json  test_plan.plan
iam_check/test/public_access/: public_access_findings.json  test.tf  test_plan.json
iam_check/test/role_inline_assume_policy/: identity_findings.json  identity_reference_policy.json  resource_findings.json  resource_reference_policy.json  test.tf  test_plan.json
iam_check/test/scp/: findings.json  test.tf  test_plan.json
iam_check/tools/: regex_patterns.py
